files/style.css
html {
    box-sizing: border-box;
}

*, *:after, *:before {
    box-sizing: inherit;
}

body {
    font-family: "Lucida Grande", Verdana, Arial, Helvetica, sans-serif;
    font-size: 12pt;
    color: #333;
    background: url(images/bg.jpg) repeat #d1d5d8;
    margin: 0;
}

img {
    border: 0;
}

input[type="text"],
input[type="password"],
textarea {
    margin: 0;
    padding: 4px;
    border: 1px solid #b2b2b2;
    border-radius: 4px;
    box-shadow: inset 0 0 2px 1px rgba(0, 0, 0, 0.1);
    -moz-box-shadow: inset 0 0 2px 1px rgba(0, 0, 0, 0.1);
    -webkit-box-shadow: inset 0 0 2px 1px rgba(0, 0, 0, 0.1);
    -o-box-shadow: inset 0 0 2px 1px rgba(0, 0, 0, 0.1);
}

input[type="text"]:focus,
input[type="password"]:focus,
input[type="text"]:required,
input[type="password"]:required,
input.button:focus,
textarea:focus {
    border-color: #4787b1;
    box-shadow: 0 0 5px 2px rgba(71, 135, 177, 0.9);
    -moz-box-shadow: 0 0 5px 2px rgba(71, 135, 177, 0.9);
    -webkit-box-shadow: 0 0 5px 2px rgba(71, 135, 177, 0.9);
    -o-box-shadow: 0 0 5px 2px rgba(71, 135, 177, 0.9);
    outline: 0;
}

a.mainaction,
input.mainaction {
    font-weight: bold;
}

a.button,
input.button {
    color: #444;
    text-shadow: 0 1px 1px #fff;
    border: 0;
    background: #f9f9f9;
    background: -moz-linear-gradient(top, #f9f9f9 0, #e2e2e2 100%);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #f9f9f9), color-stop(100%, #e2e2e2));
    background: -o-linear-gradient(top, #f9f9f9 0, #e2e2e2 100%);
    background: -ms-linear-gradient(top, #f9f9f9 0, #e2e2e2 100%);
    background: linear-gradient(top, #f9f9f9 0, #e2e2e2 100%);
    box-shadow: inset 0 1px 0 0 #fff;
    -moz-box-shadow: inset 0 1px 0 0 #fff;
    -webkit-box-shadow: inset 0 1px 0 0 #fff;
    -o-box-shadow: inset 0 1px 0 0 #fff;
    text-decoration: none;
    padding: 4px 12px;
    border-radius: 5px;
    cursor: pointer;
    font-size: .8em;
}

a.button:hover,
a.button:focus,
input.button:hover,
input.button:focus {
    box-shadow: 0 0 5px 2px rgba(71, 135, 177, 0.9), inset 0 1px 0 0 #fff;
    -moz-box-shadow: 0 0 5px 2px rgba(71, 135, 177, 0.9), inset 0 1px 0 0 #fff;
    -webkit-box-shadow: 0 0 5px 2px rgba(71, 135, 177, 0.9), inset 0 1px 0 0 #fff;
    -o-box-shadow: 0 0 5px 2px rgba(71, 135, 177, 0.9), inset 0 1px 0 0 #fff
}

a.button:active,
input.button:active {
    color: #333;
    background: -moz-linear-gradient(top, #dcdcdc 0, #f9f9f9 100%);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #dcdcdc), color-stop(100%, #f9f9f9));
    background: -o-linear-gradient(top, #dcdcdc 0, #f9f9f9 100%);
    background: -ms-linear-gradient(top, #dcdcdc 0, #f9f9f9 100%);
    background: linear-gradient(top, #dcdcdc 0, #f9f9f9 100%)
}

a.button.disabled,
a.button[disabled],
input.button.disabled,
input.button[disabled],
a.button.disabled:hover,
a.button[disabled]:hover,
input.button.disabled:hover,
input.button[disabled]:hover {
    color: #aaa !important;
    box-shadow: 0 1px 1px 0 rgba(160, 160, 160, 0.4);
    -o-box-shadow: 0 1px 1px 0 rgba(160, 160, 160, 0.4);
    -webkit-box-shadow: 0 1px 1px 0 rgba(160, 160, 160, 0.4);
    -moz-box-shadow: 0 1px 1px 0 rgba(160, 160, 160, 0.4);
}








.box {
    position: absolute;
    height: 320px;
    width: 480px;
    left: 50%;
    top: 50%;
    margin: -160px 0 0 -240px;
    background: url(images/bg-box.jpg) top left no-repeat #5c5c5c;
    text-align: center;
    padding: 20px;
    border: 1px solid #333;
    border-radius: 5px;
    box-shadow: inset 0 0 1px #ccc;
    -o-box-shadow: inset 0 0 1px #ccc;
    -webkit-box-shadow: inset 0 0 1px #ccc;
    -moz-box-shadow: inset 0 0 1px #ccc;
    color: #fff;
    text-shadow: 2px 2px #000;
}

.box-big {
    width: 620px;
    height: 450px;
    margin: -225px 0 0 -310px;
    background-image: url(images/bg-box-big.jpg)
}

.box .title {
    font-size: 2em;
    margin: 0;
}

.box .content {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    margin: 20px;
}

label input,
label span {
    vertical-align: middle;
}

label.disabled {
    color: #999;
}

label {
    font-size: 1.1em;
    color: #fff;
}

.box .content span,
.box .content div {
    font-size: 1.2em;
}

.box p {
    margin: 0 0 12px;
}

.link {
    cursor: pointer;
}

.logs {
    width: 100%;
    height: 200px;
    resize: vertical;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 20px;
}

.box .content .small {
    font-size: .9em;
}

.box .content .big {
    font-size: 1.5em;
}

.box .content .success {
    color: #9f3;
}

.box .content .warn {
    color: #ffa500;
}

.box .content .error {
    color: #ff0000;
}

.box .content .note {
    font-size: .7em;
}

.box .content .bottom {
    position: relative;
    bottom: -15px;
}


.box input[type="text"],
.box input[type="password"] {
    width: 100%;
    border-color: #666;
}


.box form table {
    width: 98%
}


.box .buttons {
    margin-top: 2em;
    text-align: center
}




.loader {
    width: 200px;
    height: 40px;
    position: relative;
    padding: 0;
    left: 50%;
    margin: 20px -100px 40px;
    list-style-type: none;
}

.loader li {
    float: left;
    position: relative;
}

.circle {
    width: 40px;
    height: 40px;
    border-radius: 0 0 50% 50%;
    border: 0 solid #fff;
    border-bottom-width: 4px;
}

.ball {
    position: absolute;
    content: "";
    width: 20px;
    height: 20px;
    top: 50%;
    left: 50%;
    margin-top: -10px;
    margin-left: -10px;
    border-radius: 100%;
    background: #fff;
    box-shadow: 0 -15px 0 0 rgba(255, 255, 255, 0.15), 0 -10px 0 0 rgba(255, 255, 255, 0.10), 0 -5px 0 0 rgba(255, 255, 255, 0.05);
}

.circle {
    -webkit-animation: rotate 1.5s cubic-bezier(0.45, 0, 1, 1) infinite;
    animation: rotate 1.5s cubic-bezier(0.45, 0, 1, 1) infinite;
}

.ball {
    -webkit-animation: fall 1.5s cubic-bezier(0.95, 0, 1, 1) infinite;
    animation: fall 1.5s cubic-bezier(0.95, 0, 1, 1) infinite;
}

.loader li:nth-child(1) div {
    -webkit-animation-delay: 100ms;
    animation-delay: 100ms;
}

.loader li:nth-child(2) div {
    -webkit-animation-delay: 200ms;
    animation-delay: 200ms;
}

.loader li:nth-child(3) div {
    -webkit-animation-delay: 300ms;
    animation-delay: 300ms;
}

.loader li:nth-child(4) div {
    -webkit-animation-delay: 400ms;
    animation-delay: 400ms;
}

.loader li:nth-child(5) div {
    -webkit-animation-delay: 500ms;
    animation-delay: 500ms;
}

@keyframes rotate {
    0%, 20% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

@-webkit-keyframes rotate {
    0%, 20% {
        -webkit-transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(360deg);
    }
}

@keyframes fall {
    0%, 20% {
        transform: translatey(-30px);
        opacity: 0;
    }
    20%, 24%, 27%, 30%, 50%, 75% {
        transform: translatey(0px);
        opacity: 1;
    }
    22% {
        transform: translatey(-10px)
    }
    25% {
        transform: translatey(-6px)
    }
    28% {
        transform: translatey(-2px)
    }
    30% {
        box-shadow: 0 0 0 rgba(255, 255, 255, 0.3);
    }
    75%, 100% {
        box-shadow: 0 -15px 0 0 rgba(255, 255, 255, 0.15), 0 -10px 0 0 rgba(255, 255, 255, 0.10), 0 -5px 0 0 rgba(255, 255, 255, 0.05);
        transform: translatey(30px);
        opacity: 0;
    }
}

@-webkit-keyframes fall {
    0%, 20% {
        -webkit-transform: translatey(-30px);
        opacity: 0;
    }
    20%, 24%, 27%, 30%, 50%, 75% {
        -webkit-transform: translatey(0px);
        opacity: 1;
    }
    22% {
        -webkit-transform: translatey(-10px)
    }
    25% {
        -webkit-transform: translatey(-6px)
    }
    28% {
        -webkit-transform: translatey(-2px)
    }
    30% {
        box-shadow: 0 0 0 rgba(255, 255, 255, 0.3);
    }
    75%, 100% {
        box-shadow: 0 -15px 0 0 rgba(255, 255, 255, 0.15), 0 -10px 0 0 rgba(255, 255, 255, 0.10), 0 -5px 0 0 rgba(255, 255, 255, 0.05);
        -webkit-transform: translatey(30px);
        opacity: 0;
    }
}

